add FIT conversion via FitCSVTool round trip
Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>